ESMValTool/esmvaltool/recipes/hydrology/esmvaltool_output/recipe_HBVmountain_20220531_090646/run/diagnostic_daily/script/log.txt
  File "/home/vhoogeland/ESMValTool/esmvaltool/diag_scripts/hydrology/HBVmountain.py", line 149
    temp = preproc.area_statistics(all_vars['tas'], operator='mean')
    ^
SyntaxError: invalid syntax
